--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vitest/coverage-v8": "^2.0.5",
     "automd": "^0.3.8",
     "changelogen": "^0.5.5",
+    "dotenv": "^16.4.5",
     "eslint": "^9.8.0",
     "eslint-config-unjs": "^0.3.2",
     "jiti": "^2.0.0-beta.3",
@@ -42,6 +43,9 @@
     "typescript": "^5.5.4",
     "unbuild": "^3.0.0-rc.7",
     "vitest": "^2.0.5"
+  },
+  "peerDependencies": {
+    "mailersend": "^2.3.0"
   },
   "packageManager": "yarn@9.7.0"
 }
