--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "mailersend": "^2.3.0",
     "resend": "^4.0.0"
   },
-  "packageManager": "yarn@9.7.0",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "axios": "^1.10.0"
   }
 }
