--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "scripts": {
     "build": "unbuild",
     "dev": "vitest dev",
+    "format": "prettier --write .",
     "lint": "eslint . && prettier -c .",
     "lint:fix": "automd && eslint . --fix && prettier -w .",
     "prepack": "yarn build",
@@ -48,7 +49,7 @@
     "eslint": "^9.8.0",
     "eslint-config-unjs": "^0.3.2",
     "jiti": "^2.0.0-beta.3",
-    "prettier": "^3.3.3",
+    "prettier": "^3.6.2",
     "typescript": "^5.5.4",
     "unbuild": "^3.0.0-rc.7",
     "vitest": "^2.0.5"
